// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterButton component > active snapshot 1`] = `
"<li
  className="filter-item"
>
  <button
    className="active"
    onClick={[Function handleFilterChange(Test Filter)]}
  >
    Test Filter
  </button>
</li>"
`;

exports[`FilterButton component > inactive snapshot 1`] = `
"<li
  className="filter-item"
>
  <button
    className=""
    onClick={[Function handleFilterChange(Test Filter)]}
  >
    Test Filter
  </button>
</li>"
`;
